fix: now blank space is covered by background image, fully responsive

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,6 @@ main {
 }
 
 @media (max-width: 480px) {
-
   .game > *  {
     font-size: 12px;
     width: 250px;
@@ -120,6 +119,7 @@ main {
   }
 
   .links img {
+    margin: 10px;
     width: 90px;
   }
 
